# AWS-MarTech-MultiAgent

./: AGENTS.md  NOTE.md  README.md
config/_default/: hugo.toml
content/: _index.md  _index.vi.md
content/01-introduction/: _index.md  _index.vi.md
content/02-architecture/: _index.md  _index.vi.md
content/03-agentcore-services/: _index.md  _index.vi.md
content/03-multi-agent-workflow/: _index.md  _index.vi.md
content/04-a2a-communication/: _index.md  _index.vi.md
content/04-agentcore-services/: _index.md  _index.vi.md
content/05-platform-agents-mcp/: _index.md  _index.vi.md
content/05-strands-framework/: _index.md  _index.vi.md
content/06-a2a-session-persistence/: _index.md  _index.vi.md
content/06-frontend-deployment/: _index.md  _index.vi.md
content/07-strands-framework/: _index.md  _index.vi.md
content/08-web-ui-infra-deploy/: _index.md  _index.vi.md
static/MarTech/: .gitignore  .prettierignore  README.md  aws-nx-plugin.config.mts  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
static/MarTech/docs/: README.md
static/MarTech/docs/components/: api-handlers.md  clevertap-agent.md  databricks-agent.md  infrastructure.md  marketing-agent.md  mcp-servers.md  session-persistence.md  shared-agent-utilities.md  talonone-agent.md  web-ui.md
static/MarTech/docs/sequence-diagrams/: sequence-chat-flow.txt  sequence-orchestrated-workflow.txt  sequence-step1-audience.txt  sequence-step2-campaign.txt  sequence-step3-promotion.txt
(+8 files in other folders)
